# ClassCulator

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  EI03Relatoriotecnico_Final_Revisado.docx  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.prod.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260505_0000_initial.py  20260512_0001_add_ensino_tags.py  20260512_0002_ensino_ambos_and_name_inference.py  20260513_0003_slots_por_dia.py  20260602_0004_curriculo_professor_opcional.py  20260603_0005_anos_e_autenticacao.py  20260607_0006_deve_trocar_senha.py  20260610_0007_set_null_professor_fk.py
app/: __init__.py  main.py  seed.py  seed_alt.py  smoke.py
app/api/: __init__.py  disciplinas.py  grade.py  professores.py  salas.py  turmas.py
app/core/: auth.py  config.py  database.py  ensino.py  security.py
app/models/: __init__.py  ano_letivo.py  convite.py  disciplina.py  grade.py  professor.py  sala.py  turma.py  usuario.py
app/schemas/: __init__.py  disciplina.py  grade.py  professor.py  sala.py  turma.py
app/services/: admin_setup.py  ano_service.py  grade_service.py
app/solver/: __init__.py  builder.py  classic.py  constraints.py  cpsat.py  diagnostics.py  domain.py  runner.py
app/static/css/: custom.css
app/static/js/: app.js  (+12 more)
app/templates/: _macros.html  base.html  gestao.html  home.html  login.html  onboarding.html  trocar_senha.html
app/web/: __init__.py  auth_routes.py  routes.py
deploy/: Caddyfile
docs/: DEPLOY.md
docs/slideshow/: ARQUITETURA.md  render_png.py
scripts/: seed.sh
(+16 files in other folders)
